traefik/post/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: "Host(`traefik.${clusterdomain:=undefined}`)"
    services:
    - kind: TraefikService
      name: api@internal
    middlewares:
    - name: append-dashboard
      namespace: traefik
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: append-dashboard
  namespace: traefik
spec:
  redirectRegex:
    regex: "^https:\\/\\/([^\\/]+)\\/?$"
    replacement: "https://$1/dashboard/"
